@@ -72,9 +72,9 @@ http://forums.cacti.net/viewtopic.php?p=145749#145749
 DONE!  ZORDER messes up imagemaps
 
 editor.php security
-rrdtool averaging   rrdtool graph /dev/null -f "" -s now-30d -e now DEF:in=../rra/atm-sl_traffic_in_5498.rrd:traffic_in:AVERAGE DEF:out=../rra/atm-sl_traffic_in_5498.rrd:traffic_out:AVERAGE VDEF:avg_in=in,AVERAGE VDEF:avg_out=out,AVERAGE PRINT:avg_in:%lf PRINT:avg_out:%lf
+DONE!  rrdtool averaging   rrdtool graph /dev/null -f "" -s now-30d -e now DEF:in=../rra/atm-sl_traffic_in_5498.rrd:traffic_in:AVERAGE DEF:out=../rra/atm-sl_traffic_in_5498.rrd:traffic_out:AVERAGE VDEF:avg_in=in,AVERAGE VDEF:avg_out=out,AVERAGE PRINT:avg_in:%lf PRINT:avg_out:%lf
 rrdtool cdefs
-external script params - needs spaces in targets
+DONE!  external script params - needs spaces in targets
 spaces in filenames/targets where appropriate - quotes, and escaped quotes "([^\"\\]*(?:\\.[^\"\\]*)*)" | (\S+)\s | \s
 DONE!   Angled VIAs
 more AICONs - NINK, PIE, GAUGE
@@ -93,7 +93,7 @@ RRD xport DS (use rrdtool graph and PRINT in fact)
 
 FIXED  Fix a few docs bugs with unclosed tags - actually this is some kind of processing bug to do with <div>s
 
-FIXED BUG imagemap floats
+FIXED  BUG imagemap floats
 DONE!  BUG: ReadData should not be run for links with no nodes (templates) or nodes with no position.
 DONE!  Documentation for printf tokens!
 DONE!  multiple instances of same map in Cacti
